# thriceai

./: .dockerignore  .gitignore  characters.json  config.py  docker-compose.yml  dockerfile  main.py  package.json  pyproject.toml  readme.md  reproduce_error.py  requirements.txt  run.py  server.py  start_server.sh  stop_server.sh  telegram_bot.py
backend/: config.py  main.py  server.py  telegram_bot.py
backend/processors/: audio_generator.py  pyav_renderer.py  reel_generator.py
backend/services/: caption_generator.py  content_writer.py  deepseek_writer.py  gemini_tts.py  kokoro_mlx_tts.py  kokoro_tts.py  mac_say_tts.py  rss_service.py
contents/: dsa.json
contents/captions/: apkvsipa_caption.txt  humor_caption.txt  moonsizes_caption.txt  moonzize_caption.txt  negative_caption.txt  nvidia_1_caption.txt  silver_caption.txt  sunday_caption.txt  valorant_caption.txt
data/: characters.json  prompt.txt  rss_cache.json  rss_channels.json
data/prompts/: blinked_thrice.txt  finance_thrice.txt  fit_thrice.txt  motivation_thrice.txt  tech_thrice.txt
data/prompts/captions/: blinked_thrice.txt
processors/: audio_generator.py  audio_processing.py  reel_generator.py
prompts/: blinked_thrice.txt  finance_thrice.txt  fit_thrice.txt  motivation_thrice.txt  tech_thrice.txt
prompts/captions/: blinked_thrice.txt
services/: caption_generator.py  content_writer.py  elevenlabs_tts.py  gemini_tts.py  mac_say_tts.py
web_app/: dockerfile  package-lock.json  package.json  tailwind.config.js
web_app/app/: globals.css  layout.tsx  page.tsx
web_app/components/generator/: BatchGenerator.tsx  CongifSection.tsx  FeedSection.tsx  (+2 more)
web_app/hooks/: useLogStream.ts  useThemeManager.ts
web_app/lib/: constants.ts
web_app/types/: index.ts
web_interface/: index.html
web_interface/static/: script.js  styles.css
(+11 files in other folders)
